# solo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PATCH_NOTES.md  README.md  doctor_report.json  fix_expected_behavior.py  fix_expected_behavior_v2.py  profile_discovery.py  pyproject.toml  pytest.ini
.claude/: settings.json
.codex/: config.toml  maintenance.sh  setup.sh
.codex/rules/: default.rules
.github/: pull_request_template.md
.github/commands/: gemini-invoke.toml  gemini-review.toml  gemini-scheduled-triage.toml  gemini-triage.toml  research-planner.toml
.github/workflows/: ci-self-test.yml  ci.yml  codex_pr_review.yml  full.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  operator-governance.yml  research-planner.yml  tier1.yml  tier2.yml  tier3.yml
analysis/context_uplift/: aggregate_bull_probe.py  aggregate_chop_probe.py  analyze_matrix.py  analyze_matrix_expanded.py  analyze_matrix_v2.py  analyze_matrix_v3.py  audit_bull_probe.py  audit_complementarity.py  complementarity_core_v1_2024.csv  complementarity_core_v1_2024.md  generate_matrix.py  generate_matrix_expanded.py  matrix.csv  matrix.parquet  matrix_rejections.csv  run_bullish_trend_probe.sh  run_chop_probe.sh  run_cross_year_study.sh  summary_2024.json
analysis/context_uplift_expanded/: matrix_expanded.csv  matrix_expanded.parquet  matrix_expanded_rejections.csv
dashboard/: README.md  index.html  server.py
data_codex/: lake
deploy/env/: edge-live-engine-paper.env.example  edge-live-runtime-alerts-paper.env.example
deploy/systemd/: edge-live-engine.service  edge-live-runtime-alerts-paper.service
docs/: 00_overview.md  01_discover.md  02_REPOSITORY_MAP.md  02_validate.md  03_promote.md  04_deploy.md  90_architecture.md  92_assurance_and_benchmarks.md  README.md  all_results_2026-04-17.md  campaign_results_2026-04-17.md  contract_enforcement_v10.md  contract_hardening_patch.md  contract_hardening_patch_continued.md  contract_hardening_patch_continued_actual.md  contract_hardening_patch_v3.md  contract_hardening_patch_v5_actual.md  contract_hardening_patch_v8_edge_semantics.md  contract_hardening_patch_v9_detector_semantics.md  detector_fix_patch_notes.md  known_limitations.md  no_liquidation_detector_patch_notes.md  no_liquidation_detector_round3_patch_notes.md  operator_command_inventory.md  operator_runbook.md  reflections.md  research_reflections_2026-04-17.md  test_hang_investigation.md  test_status.md
docs/architecture/: import_rules.md
docs/lifecycle/: broad-current-data-event-reflections.md  deploy.md  discover.md  edge-cell-discovery.md  funding-template-discovery-2023-2025.md  liquidation-exhaustion-matrix.md  overview.md  promote.md  validate.md
docs/operator/: artifact-preview.md  deploy-readiness.md  discover-edge.md  quickstart.md  research-vocabulary.md  runbook.md  runtime-event-eligibility.md  tiny_live_runbook.md
docs/plans/: INDEX.md  plan.md  tech_debt.md
docs/reference/: architecture.md  assurance.md  commands.md  data-and-artifacts.md  detector_governance.md  detector_governance_completion_plan.md  full_repo_surface.md  implementation-roadmap.md  readiness-report.md  repository_map.md  research-concept-map.md  spec_authoring.md  specs-and-domain.md  supported-path.md
project/: __init__.py  cli.py
research/: predeclared_hypotheses.yaml
scratch/: verify_write_proposal.py
solo-offline-data-liq-exhaust-bundle/: .gitignore  CLAUDE.md  Makefile  pyrightconfig.json  requirements-dev.txt
spec/: blueprint_policies.yaml  copula_pairs.csv  cost_model.yaml  deleveraging_confirmatory_search.yaml  gates.yaml  global_defaults.yaml  historical_universe.csv  productive_search.yaml  productive_search_regime_filter.yaml  relaxed_bridge_gates.yaml  search_space.yaml  search_space_btc_reduced.yaml  search_space_liq_climax_funding.yaml  search_space_liq_proxy_btc.yaml  search_space_noliq.yaml
(+3799 files in other folders)
